--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="col-5 col-sm-6 col-md-2 d-flex justify-content-end header_bottom_right-wrap">
 					<div class="header_bottom_right">
-						<button type="button" class="btn-icon icon-color-custom ico_search"></button>
+						<button type="button" class="btn-icon icon-color-custom ico_search" data-popup-init="search"></button>
 						<button type="button" class="btn-icon icon-color-custom ico_user"></button>
 						<div class="cart-button active">
 							<div class="cart-qty">1</div>
