--- a/src/partials/main/product.html
+++ b/src/partials/main/product.html
@@ -5,7 +5,7 @@
 			<div class="col-md-12">
 				<div class="product-block">
 					<div class="product-desc-image">
-						@@include('../unit-templates/images.html', { "nav_images": ["../images/images/goodp2.png", "../images/images/goodp3.png", "../images/images/goodp4.png"], "main_image": "../images/images/goodp1.png" })
+						@@include('../unit-templates/images.html', { "nav_images": ["../images/images/goodp2.png", "../images/images/goodp3.png", "../images/images/goodp4.png", "../images/images/goodp2.png", "../images/images/goodp3.png", "../images/images/goodp4.png"] })
 					</div>
 					<div class="product_describe">
 						<div class="product_describe-block">
