--- a/src/partials/main/slider.html
+++ b/src/partials/main/slider.html
@@ -1,6 +1,6 @@
 <!-- SLIDER section -->
 <div class="slider slider_wrap">
-	<div class="slider-inside">
+	<div class="slider-inside" id="home_slider">
 		@@include('../unit-templates/slide.html')
 		@@include('../unit-templates/slide.html')
 		@@include('../unit-templates/slide.html')
@@ -8,9 +8,6 @@
 	<div class="slider_indicator">
 		<div class="container">
 			<div class="slider-indicator-block">
-				<div class="slider-indicator-item"></div>
-				<div class="slider-indicator-item slick-active"></div>
-				<div class="slider-indicator-item"></div>
 			</div>
 		</div>
 	</div>
