--- a/src/partials/main/subscribe.html
+++ b/src/partials/main/subscribe.html
@@ -6,7 +6,7 @@
 				<span class="subscription_title text_important">NEWS LETTER</span>
 				<span class="subscription_description">join us now to get all news and special offers</span>
 			</div>
-			<form name="subscription" class="subscription_form">
+			<form name="subscription" class="subscription_form" autocomplete="on" novalidate>
 				<div class="email-block input-parent">
 					<label>
 						<span class="icon icon-color-custom ico_mail"></span>
@@ -16,7 +16,7 @@
 					<div class="text-invalid">Email address is invalid!</div>
 				</div>
 				<div class="submit-button-block">
-					<input type="submit" class="btn" value="join us" />
+					<input type="submit" name="submit" class="btn" value="join us" />
 				</div>
 			</form>
 		</div>
