--- a/src/partials/popup-wrap.html
+++ b/src/partials/popup-wrap.html
@@ -1,11 +1,11 @@
 <!-- POPUP's block -->
 <div class="popup-wrap animate-popup" id="popups">
-	<div class="back-wall"></div>
+	<div class="back-wall" data-popup-close></div>
 	<div class="popups-block_wrap">
 		<div class="popups-frame_wrap">
 			<div class="popups-frame">
-			<div class="close-button-row">
-				<button class="btn-icon icon-color-custom ico_close close-btn" type="button" id="close_popup"></button>
+				<div class="close-button-row">
+				<button class="btn-icon icon-color-custom ico_close close-btn" type="button" data-popup-close></button>
 			</div>
 			<div class="popups-window">
 				@@include('./popups/cart.html')
@@ -21,6 +21,7 @@
 				@@include('./popups/search.html')
 				@@include('./popups/share-product.html')
 				@@include('./popups/signin.html')
+				@@include('./popups/custom.html')
 			</div>
 		</div>
 		</div>
