--- a/src/partials/popups/payment.html
+++ b/src/partials/popups/payment.html
@@ -1,4 +1,4 @@
 <!-- Payment popup -->
-<div class="popup-window popup-payment" data-popup-targ="payment">
+<div class="popup-window popup-retreat popup-payment" data-popup-targ="payment">
 
 </div>
