--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css"/>
+	<link rel="stylesheet" type="text/css" href="plugins/css/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="css/basic.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	@@if (state === 'test') {
