--- a/src/partials/main/contact-info.html
+++ b/src/partials/main/contact-info.html
@@ -16,7 +16,7 @@
 			<!-- feedback message -->
 			<div class="message-block">
 				<h4>Message</h4>
-				<form name="message" class="container-fluid">
+				<form name="message" class="container-fluid" autocomplete="on" novalidate>
 					<div class="row">
 						<div class="col-md-6 input-parent">
 							<input class="input" type="email" name="email" placeholder="Your email" required />
@@ -24,7 +24,7 @@
 							<div class="text-invalid">Email is invalid!</div>
 						</div>
 						<div class="col-md-6 align-items-md-end input-parent">
-							<input class="input" type="text" name="name" placeholder="Your name" />
+							<input class="input" type="text" name="given-name" placeholder="Your name" />
 							<div class="text-empty">This field is required!</div>
 						</div>
 					</div>
@@ -36,7 +36,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12 d-flex justify-content-md-end p-0 pt-2">
-							<input class="btn" type="submit" value="Send" />
+							<input class="btn" name="submit" type="submit" value="Send" />
 						</div>
 					</div>
 				</form>
