--- a/src/partials/popups/confirm.html
+++ b/src/partials/popups/confirm.html
@@ -1,7 +1,7 @@
 <!-- Confirmation registered popup -->
-<div class="popup-window popup-confirm" data-popup-targ="confirm_registered">
+<div class="popup-window popup-retreat popup-confirm" data-popup-targ="confirm_registered">
 	<div class="h5">Confirmation</div>
-	<form name="confirmation" class="d-flex flex-column align-items-center">
+	<form name="confirmation" class="d-flex flex-column align-items-center" autocomplete="on" novalidate>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 pb-3 pt-2">
@@ -11,7 +11,7 @@
 			<div class="row hidden" id="popup_confirm_phone_block">
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="tel" name="empty_phone" placeholder="Phone*" />
+						<input class="input" type="tel" name="empty_phone" placeholder="Phone*" required />
 						<div class="text-empty">This field is required!</div>
 						<div class="text-invalid">Phone number is invalid!</div>
 					</div>
@@ -20,7 +20,7 @@
 			<div class="row">
 				<div class="col-md-12 py-4">
 					<label class="select-label label">Choose a shipping method:</label> 
-					<select name="shipping_method" class="select inline-select">
+					<select name="shipping_method" class="select inline-select" required>
 						@@for ( var i = 0; i < post.length; i++ ) {
 						<option value="`+post[i]+`">`+post[i]+`</option>
 						}
@@ -37,14 +37,14 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="text" name="newpost_city" placeholder="City*" />
+						<input class="input" type="text" name="newpost_city" placeholder="City*" autocomplete="on" required data-valid-template="/^[\w\s\'\-\.\,\u0022]+$/" />
 						<div class="text-empty">This field is required!</div>
 						<div class="text-invalid">Invalid city name!</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="number" name="newpost_department" placeholder="Department № *" />
+						<input class="input" type="number" name="newpost_department" placeholder="Department № *" autocomplete="on" required />
 						<div class="text-empty">This field is required!</div>
 					</div>
 				</div>
@@ -52,16 +52,16 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="text" name="newpost_first_name" placeholder="First name*" />
+						<input class="input" type="text" name="newpost_first_name" placeholder="First name*" autocomplete="on" required data-valid-template="/^[^@\~\!\#\$\%\^\?\*\(\)\_\=]+$/" />
 						<div class="text-empty">This field is required!</div>
-						<div class="text-invalid">This field contains incorrect symbols!</div>
+						<div class="text-invalid">This field contains invalid symbols!</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="text" name="newpost_last_name" placeholder="Last name*" />
+						<input class="input" type="text" name="newpost_last_name" placeholder="Last name*" autocomplete="on" required data-valid-template="/^[^@\~\!\#\$\%\^\?\*\(\)\_\=]+$/" />
 						<div class="text-empty">This field is required!</div>
-						<div class="text-invalid">This field contains incorrect symbols!</div>
+						<div class="text-invalid">This field contains invalid symbols!</div>
 					</div>
 				</div>
 			</div>
@@ -70,7 +70,7 @@
 			<div class="row">
 				<div class="col-md-12 pb-4 pt-5">
 					<label class="select-label label">Choose shipping address:</label> 
-					<select name="ukrpost_address" class="select inline-select">
+					<select name="ukrpost_address" class="select inline-select" required>
 						@@for ( var i = 0; i < address.length; i++ ) {
 						<option value="`+address[i]+`">`+address[i]+`</option>
 						}
@@ -87,7 +87,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="input-parent">
-						<select name="country" class="select placeholder">
+						<select name="country-name" class="select placeholder" required>
 							<option value="" selected disabled>Country*</option>
 							@@for ( var i = 0; i < country.length; i++ ) {
 							<option value="`+country[i]+`">`+country[i]+`</option>
@@ -100,45 +100,45 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="text" name="city" placeholder="City*" />
+						<input class="input" type="text" name="city" placeholder="City*" autocomplete="on" required data-valid-template="/^[\w\s\'\-\.\,\u0022]+$/" />
 						<div class="text-empty">This field is required!</div>
 						<div class="text-invalid">Invalid city name!</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="number" name="post_code" placeholder="Zip/Postal Code*" />
+						<input class="input" type="number" name="post_code" placeholder="Zip/Postal Code*" autocomplete="on" required data-valid-template="/^[0-9\/\\]{3,9}$/" data-blocked-template="/^[0-9\/\\]+$/" />
 						<div class="text-empty">This field is required!</div>
+						<div class="text-invalid">This field must to contains 3-9 symbols!</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="text" name="street" placeholder="Street*" />
+						<input class="input" type="text" name="street" placeholder="Street*" autocomplete="on" required data-valid-template="/^[\w\s\'\-\.\,\u0022]+$/" />
 						<div class="text-empty">This field is required!</div>
 						<div class="text-invalid">Invalid street name!</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="text" name="house_number" placeholder="House number*" />
+						<input class="input" type="text" name="house_number" placeholder="House number*" autocomplete="on" required />
 						<div class="text-empty">This field is required!</div>
-						<div class="text-invalid">Invalid house number!</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="text" name="first_name" placeholder="First name*" />
+						<input class="input" type="text" name="given-name" placeholder="First name*" required data-valid-template="/^[^@\~\!\#\$\%\^\?\*\(\)\_\=]+$/" />
 						<div class="text-empty">This field is required!</div>
 						<div class="text-invalid">This field contains incorrect symbols!</div>
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="input-parent">
-						<input class="input" type="text" name="last_name" placeholder="Last name*" />
+						<input class="input" type="text" name="family-name" placeholder="Last name*" required data-valid-template="/^[^@\~\!\#\$\%\^\?\*\(\)\_\=]+$/" />
 						<div class="text-empty">This field is required!</div>
 						<div class="text-invalid">This field contains incorrect symbols!</div>
 					</div>
@@ -149,7 +149,7 @@
 			<div class="row">
 				<div class="col-md-12 pb-4 pt-5">
 					<label class="select-label label">Payment method:</label> 
-					<select name="payment_method" class="select inline-select">
+					<select name="payment_method" class="select inline-select" required>
 						@@for ( var i = 0; i < payment.length; i++ ) {
 						<option value="`+payment[i]+`">`+payment[i]+`</option>
 						}
