--- a/src/partials/popups/info.html
+++ b/src/partials/popups/info.html
@@ -1,7 +1,7 @@
 <!-- Info popup -->
-<div class="popup-window popup-information" data-popup-targ="information">
+<div class="popup-window popup-retreat popup-information" data-popup-targ="information">
 	<div class="h6" id="info_popup_text">Information text.</div>
 	<div class="d-flex justify-content-center">
-		<button type="button" class="text-btn_black">OK</button>
+		<button type="button" class="text-btn_black" data-popup-close>OK</button>
 	</div>
 </div>
