--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -26,8 +26,8 @@ $tx_important: #ff5912;
 $shadow: 0px 5px 15px 0px rgba(0,0,0,0.1);
 $hover_lightness: 50%;
 $hover_opacity: 0.4;
-$disabled_color: 50%;
-$disabled_bg: 40%;
+$disabled_color: 70%;
+$disabled_bg: 60%;
 
 
 // icons
@@ -52,6 +52,21 @@ $loader: url(../images/ico/loader.svg);
 $icon_close: url(../images/ico/close.svg);
 $menu_mob: url(../images/ico/menu_mob.svg);
 $open: url(../images/ico/open.svg);
+
+
+// z-index
+$z_loader: 1020;
+$z_popup: 1000;
+$z_popup_back: 1001;
+$z_popup_wrap: 1002;
+$z_tooltip: 1005;
+$z_main_menu_adaptive: 100;
+$z_header_btn_adaptive: 80;
+$Z_home_slider: 60;
+$z_home_slider_indicator: 65;
+$z_product_slider: 30;
+$z_selector_item_list: 50;
+$z_range_point: 55;
 
 
 
@@ -142,6 +157,12 @@ $open: url(../images/ico/open.svg);
 }
 %form_colors:hover::placeholder {
 	color: scale-color($tx_black, $lightness:$hover_lightness);
+}
+%form_colors:disabled::placeholder {
+	color: scale-color($tx_black, $lightness:$disabled_color);
+}
+%form_colors:hover:disabled::placeholder {
+	color: scale-color($tx_black, $lightness:$disabled_color);
 }
 %form_structure {
 	@include fonts(HarmoniaSansSemiBd, 1rem, 500, 1rem);
