--- a/src/sass/basic.css
+++ b/src/sass/basic.css
@@ -209,6 +209,9 @@ th {
 	-moz-text-size-adjust: none;
 	-ms-text-size-adjust: none;
 }
+*:focus {
+    outline: none;
+}
 body, h1, h2, h3, h4, h5, h6, p, blockquote {
 	margin: 0;
 	padding: 0;
@@ -323,6 +326,6 @@ ul {
 }
 
 body .hidden {
-	display: none;
+	display: none !important;
 }
-/* /base styles */
+/* base styles */
